--- a/css/style.css
+++ b/css/style.css
@@ -3675,6 +3675,9 @@ svg .llms-animated-circle {
   width: 100%;
   text-align: center; }
 
+.single-llms_quiz main > article {
+  min-height: 500px; }
+
 .single-llms_quiz .llms-course-navigation {
   margin-top: 1em;
   padding-top: 0; }
